# dna

testies/: README.md  setup.cfg  testies.py
testies/docs/: conf.py  index.rst  reference.rst
testies/testies/: __init__.py  __main__.py
