[metadata]
name = testies
version = 1.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = XOio PUrE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = testies
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    testies=testies:main
